# lru_lib

./: Cargo.toml  README.md  prompt.txt
docs/: architecture.md  pipeline_state.md  requirements.md  technical_spec.md
docs/backlog/done/: 001_setup_project_structure.md  002_define_core_traits_and_types.md  003_implement_capacity_only_mode.md  004_implement_ttl_only_mode.md  005_implement_hybrid_mode.md  006_implement_thread_safety.md  007_implement_persistence.md  008_write_documentation.md  010_add_bincode_dependency.md  011_implement_binary_persistence_adapter.md  012_register_binary_adapter.md  013_add_persistence_tests.md  014_add_cache_interface_methods.md
src/: error.rs  lib.rs  models.rs
src/cache/: mod.rs  policy.rs  storage.rs
src/persistence/: binary_adapter.rs  json_adapter.rs  mod.rs
tests/: cache_tests.rs  capacity_tests.rs  hybrid_tests.rs  persistence_tests.rs  ttl_tests.rs
